Layout tweaks Fix spacing of subject tools Rename annotations.styl

--- a/css/custom.styl
+++ b/css/custom.styl
@@ -14,14 +14,14 @@
       
       h2
         display: inline-block
-        width: 50%
+        width: 45%
         text-align: left
         font-size: 1em
     
       .tools
         display: inline-block
         text-align: right
-        width: 50%
+        width: 55%
       
       .readymade-clickable
         background: rgba(0, 0, 0, 0.1)
